"Nuevos cambios en el proyecto"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <img src="img/mundo.jpg" alt="mundo" class="imagen">
   <div class="contenedor">
     <h1>Clima Mundial</h1>
     <input type="text" id="ciudadEntrada" placeholder="Ingrese una ciudad">
