--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-  <img src="img/mundo.jpg" alt="mundo" class="imagen">
+  <img src="img/notero2-removebg-preview.png" alt="mundo" class="imagen">
+  <img src="img/mundo3.jpg" alt="mundo" class="imagen2">
   <div class="contenedor">
     <h1>Clima Mundial</h1>
     <input type="text" id="ciudadEntrada" placeholder="Ingrese una ciudad">
